# PhysioSkeptic

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: default.yaml
data/: README.md  patch_report.schema.json  sample_patch_report.json
physioskeptic_ui/: build.spec  main.py  requirements.txt
physioskeptic_ui/core/: __init__.py  api_client.py  database.py  pipeline.py  signal_loader.py
physioskeptic_ui/ui/: __init__.py  main_window.py  splash.py  theme.py
physioskeptic_ui/ui/pages/: __init__.py  analysis.py  batch.py  dashboard.py  debate_viewer.py  history.py  settings.py  signal_import.py
physioskeptic_ui/ui/widgets/: __init__.py  nav_button.py  patch_report_widget.py  result_card.py  signal_plot.py
prompts/: advocate.yaml  arbiter.yaml  checker.yaml  proposer.yaml  skeptic.yaml
scripts/: make_release_zip.py  reproduce_figures.py  run_demo.py  run_eval.py
src/physioskeptic/: __init__.py  corruptions.py  debate.py  distill_student.py  encoder.py  llm_clients.py  metrics.py  patch_report.py  routing.py  signal_processing.py  train_encoder.py
tests/: test_patch_report.py  test_routing.py
